--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "concurrently \"npm run node:watch\" \"npm run sass:watch\"",
+    "node:watch": "nodemon index.js",
+    "sass:watch": "sass --watch src/styles/* public/main.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,6 +24,11 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "nightwatch": "^1.5.1",
+    "node-fetch": "^2.6.1",
     "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "concurrently": "^6.0.0",
+    "nodemon": "^2.0.7"
   }
 }
