--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "nightwatch": "^1.5.1",
     "node-fetch": "^2.6.1",
     "sass": "^1.32.8"
